# embedded-audio-sample-player-with-midi-support

./: EXPERIMENTAL-RESULTS.md  Kat Notes  Makefile  ParseWav.c  ParseWav.h  Purr  Purr.c  README.md
dev/: codec_wm8731.cpp  codec_wm8731.h
docs/experimental-results/: EXPERIMENTAL-RESULTS.md
docs/i2c-codec-driver/: i2c-codec-design.md
docs/lessons-learned/: LESSONS-LEARNED.md
docs/sai-audio-driver/: sai-design.md
docs/sd-fs-driver/: sd-fs-design.md
docs/uart-midi-driver/: uart-midi-design.md
docs/wav-player/: Readme-wav-parser.md
libs/FatFS/: sd_diskio.h
src/: CMakeLists.txt  FreeRTOSConfig.h  ParseWav.h  STM32H750IB_sram.lds  blinky.cpp  stm32h7xx_hal_conf.h
src/FatFS/: CMakeLists.txt  bsp_sd_diskio.c  bsp_sd_diskio.h  ffconf.h  sd_diskio.c  sd_diskio.h
src/FatFS/option/: syscall.c
src/cmake-helpers/cmake/: FindCMSIS.cmake
src/drivers/: CMakeLists.txt  MIDI_event.h  MIDI_handler.h  MIDI_parser.cpp  MIDI_parser.h  codec_wm8731.cpp  codec_wm8731.h  fatfs.cpp  fatfs.h  sai-design.md  sai-driver.cpp  sai-driver.h  sdmmc-driver.cpp  sdmmc-driver.h
src/per/: CMakeLists.txt  UART.cpp  UART.h
src/testing/: audio-comparison-test.py
src/util/: CMakeLists.txt  circular_buffer.h
src/wav-parser/: CMakeLists.txt  Readme-wav-parser.md  wav-parser.cpp  wav-parser.h
